Update title and content of actividad propuestas22.html

--- a/actividad propuestas22.html
+++ b/actividad propuestas22.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Hugo Ramírez</title>
+<title>Ejercicio Propuesto</title>
 
 </head>
 <body>
@@ -39,4 +39,5 @@
 
 
 </body>
+
 </html>
